--- a/parallax.html
+++ b/parallax.html
@@ -33,7 +33,7 @@
  	<div class="container">
 		<p class="mainp"><br><br>Hello! Welcome to my online portfolio. Here, you will be able to get to know me as well as learn about my projects that I am working on (this website is one of them! Not optimized for mobile). You also will be able to see a few of my works in photography and design (all photos used througout the website are mine). 
     <br><br><br></p>
-  <div class="parallaxme" data-z-index="1" data-parallax="scroll" data-image-src="IMG_9877.JPG">
+  <div class="parallaxme" data-z-index="1" data-parallax="scroll" data-image-src="aboutme.jpg">
     <a href="#" class="aboutmelink"><h1 class="aboutme"> About Me</h1></a>
   </div>
   <p class="mainp"><br><br>
@@ -53,8 +53,11 @@ A few of my future projects include:
      1. App development for effecient coding on mobile platforms
      2. Use Cybersecurity tools to better my understanding of Information Security 
      3. Building a guitar and use computer interactive music
-  </pre><p class="mainp">
-  Sed malesuada ipsum eget tellus fermentum, in imperdiet massa pharetra. Aliquam sit amet est vel tortor fermentum mollis. Cras justo metus, tristique vitae lobortis ut, aliquet sed nulla. Quisque in aliquam nisl. Proin sit amet tempus nibh. Morbi non orci vulputate est porttitor venenatis in et leo. Nunc varius, diam at gravida feugiat, sem mauris blandit orci, vel pulvinar lacus mauris vel velit. Nunc tempus turpis facilisis nisi elementum, sit amet accumsan tellus efficitur.</p>
+
+
+
+  </pre>
+   <div class="parallax" data-z-index="1" data-parallax="scroll" data-image-src="mainpage1.jpg"></div>
 
 	</div>
   </body>
