--- a/parallax.html
+++ b/parallax.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-    <meta charset="utf-8" name="viewport" content="width=device-width initial-scale=1">
+    <meta charset="utf-8" name="viewport" content="width=device-width, height=device-height, inital-scale=1.0">
     <title>Neil Koul</title>
     <link rel="stylesheet" href="stylepara.css">
     <link href="https://fonts.googleapis.com/css?family=Oleo+Script|Robato">
@@ -57,12 +57,13 @@ A few of my future projects include:
 
 
   </pre>
-   <div class="parallax" data-z-index="1" data-parallax="scroll" data-image-src="mainpage1.jpg"></div>
-
+   
 	</div>
   </body>
   <footer>
-    
+    <div class="parallaxfoot" data-z-index="1" data-parallax="scroll" data-image-src="mainpage1.jpg">
+      
 
+    </div>
   </footer>
 </html>
