real quick update (More testing)

--- a/parallax.html
+++ b/parallax.html
@@ -47,7 +47,7 @@
   <p class="mainp">
   <br><br><br>
   A lot of my current projects are very art-oriented and very much ecletic in a manner where I combine all of my collective knowledge to create something. This website had been an ongoing project for awhile, learning HTML, CSS, and Javascript in the process. <br><br>
-  </p><pre class="mainp">
+  </p><p class="mainp">
 A few of my future projects include:
 
      1. App development for effecient coding on mobile platforms
@@ -56,7 +56,7 @@ A few of my future projects include:
 
 
 
-  </pre>
+  </p>
    
 	</div>
   </body>
