--- a/parallax.html
+++ b/parallax.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-    <meta charset="utf-8" name="viewport" content="width=device-width, height=device-height, inital-scale=1.0">
-    <title>Neil Koul</title>
+    <meta charset="utf-8" name="viewport" content="width=device-width, height=device-height, inital-scale=1.0"/>
+   <title>Neil Koul</title>
     <link rel="stylesheet" href="stylepara.css">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Oleo+Script|Robato">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="parallax.min.js"></script>
@@ -52,18 +53,65 @@ A few of my future projects include:
 
      1. App development for effecient coding on mobile platforms
      2. Use Cybersecurity tools to better my understanding of Information Security 
-     3. Building a guitar and use computer interactive music
-
-
-
+     3. Building a guitar and use computer interactive music<br><br><br>
   </p>
    
 	</div>
   </body>
-  <footer>
-    <div class="parallaxfoot" data-z-index="1" data-parallax="scroll" data-image-src="mainpage1.jpg">
-      
+  <footer class="footer-distributed">
 
-    </div>
-  </footer>
+      <div class="footer-left">
+
+        <img src="logof4.png">
+        <p class="footer-links">
+          <a href="parallax.html">Home</a>
+          ·
+          <a href="#">About Me</a>
+          ·
+          <a href="projects.html">Projects</a>
+          ·
+          <a href="#">Contact</a>
+        </p>
+
+        <p class="footer-company-name">Neil Koul &copy; 2017</p>
+      </div>
+
+      <div class="footer-center">
+
+        <div>
+          <i class="fa fa-map-marker"></i>
+          <p><span>Omaha,</span>Nebraska</p>
+        </div>
+
+        <div>
+          <i class="fa fa-phone"></i>
+          <p>402 510 8615</p>
+        </div>
+
+        <div>
+          <i class="fa fa-envelope"></i>
+          <p><a href="mailto:support@company.com">neilkant@hotmail.com</a></p>
+        </div>
+
+      </div>
+
+      <div class="footer-right">
+
+        <p class="footer-company-about">
+          <span>About the Website</span>
+          Website is 100% designed by me. Social networking logos are not mine. Any images used throughout are copyrighted and are intellectual property belonging to me, the same applies to my projects.
+        </p>
+
+        <div class="footer-icons">
+
+          <a href="#"><i class="fa fa-facebook"></i></a>
+          <a href="#"><i class="fa fa-twitter"></i></a>
+          <a href="#"><i class="fa fa-linkedin"></i></a>
+          <a href="#"><i class="fa fa-github"></i></a>
+
+        </div>
+
+      </div>
+
+    </footer>
 </html>
