Added images to project page, better scaling

--- a/projects.html
+++ b/projects.html
@@ -32,11 +32,74 @@
 <body>
 <div class="container">
 	<p>Sed malesuada ipsum eget tellus fermentum, in imperdiet massa pharetra. Aliquam sit amet est vel tortor fermentum mollis. Cras justo metus, tristique vitae lobortis ut, aliquet sed nulla. Quisque in aliquam nisl. Proin sit amet tempus nibh. Morbi non orci vulputate est porttitor venenatis in et leo. Nunc varius, diam at gravida feugiat, sem mauris blandit orci, vel pulvinar lacus mauris vel velit. Nunc tempus turpis facilisis nisi elementum, sit amet accumsan tellus efficitur.</p>
+   <div class="parallax" data-z-index="1" data-parallax="scroll" data-image-src="pro1.jpg">
+   </div>  
 	<p>Sed malesuada ipsum eget tellus fermentum, in imperdiet massa pharetra. Aliquam sit amet est vel tortor fermentum mollis. Cras justo metus, tristique vitae lobortis ut, aliquet sed nulla. Quisque in aliquam nisl. Proin sit amet tempus nibh. Morbi non orci vulputate est porttitor venenatis in et leo. Nunc varius, diam at gravida feugiat, sem mauris blandit orci, vel pulvinar lacus mauris vel velit. Nunc tempus turpis facilisis nisi elementum, sit amet accumsan tellus efficitur.</p>
+  <div class="parallax" data-z-index="1" data-parallax="scroll" data-image-src="pro2.jpg">
+   </div>
 	<p>Sed malesuada ipsum eget tellus fermentum, in imperdiet massa pharetra. Aliquam sit amet est vel tortor fermentum mollis. Cras justo metus, tristique vitae lobortis ut, aliquet sed nulla. Quisque in aliquam nisl. Proin sit amet tempus nibh. Morbi non orci vulputate est porttitor venenatis in et leo. Nunc varius, diam at gravida feugiat, sem mauris blandit orci, vel pulvinar lacus mauris vel velit. Nunc tempus turpis facilisis nisi elementum, sit amet accumsan tellus efficitur.</p>
-	
+	<div class="parallax" data-z-index="1" data-parallax="scroll" data-image-src="pro3.jpg">
+   </div>
+   <p>Sed malesuada ipsum eget tellus fermentum, in imperdiet massa pharetra. Aliquam sit amet est vel tortor fermentum mollis. Cras justo metus, tristique vitae lobortis ut, aliquet sed nulla. Quisque in aliquam nisl. Proin sit amet tempus nibh. Morbi non orci vulputate est porttitor venenatis in et leo. Nunc varius, diam at gravida feugiat, sem mauris blandit orci, vel pulvinar lacus mauris vel velit. Nunc tempus turpis facilisis nisi elementum, sit amet accumsan tellus efficitur.</p>
+
 
 
 </div>
 </body>
+<footer class="footer-distributed">
+
+      <div class="footer-left">
+
+        <img src="logof4.png">
+        <p class="footer-links">
+          <a href="parallax.html">Home</a>
+          ·
+          <a href="#">About Me</a>
+          ·
+          <a href="projects.html">Projects</a>
+          ·
+          <a href="#">Contact</a>
+        </p>
+
+        <p class="footer-company-name">Neil Koul &copy; 2017</p>
+      </div>
+
+      <div class="footer-center">
+
+        <div>
+          <i class="fa fa-map-marker"></i>
+          <p><span>Omaha,</span>Nebraska</p>
+        </div>
+
+        <div>
+          <i class="fa fa-phone"></i>
+          <p>402 510 8615</p>
+        </div>
+
+        <div>
+          <i class="fa fa-envelope"></i>
+          <p><a href="mailto:support@company.com">neilkant@hotmail.com</a></p>
+        </div>
+
+      </div>
+
+      <div class="footer-right">
+
+        <p class="footer-company-about">
+          <span>About the Website</span>
+          Website is 100% designed by me. Social networking logos are not mine. Any images used throughout are copyrighted and are intellectual property belonging to me, the same applies to my projects.
+        </p>
+
+        <div class="footer-icons">
+
+          <a href="#"><i class="fa fa-facebook"></i></a>
+          <a href="#"><i class="fa fa-twitter"></i></a>
+          <a href="#"><i class="fa fa-linkedin"></i></a>
+          <a href="#"><i class="fa fa-github"></i></a>
+
+        </div>
+
+      </div>
+      </footer>
+
 </html>
