--- a/parallax.html
+++ b/parallax.html
@@ -26,7 +26,7 @@
     
 
     <div class="parallaxtop" data-z-index="1" data-parallax="scroll" data-image-src="IMG_8224.jpg">
-      <h1 class="introh"> HI I'M NEIL KOUL. <br> A COMUPTER SCIENTIST.</h1>
+      <h1 class="introh"> HI I'M NEIL KOUL, <br> A COMUPTER SCIENTIST.</h1>
    </div>  
 </head>
   
