lightbox for photos

--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,7 @@
 	<meta charset="utf-8" name="viewport" content="width=device-width initial-scale=1">
     <title>Neil Koul</title>
     <link rel="stylesheet" href="projectsc.css">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Oleo+Script|Robato">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="parallax.min.js"></script>
@@ -34,7 +35,7 @@
 	<p>Throughout this page, you will be able to see a few of my current projects as well as past projects that I have completed. </p>
    <div class="parallax" data-z-index="1" data-parallax="scroll" data-image-src="pro1.jpg">
    </div>  
-	<p>Sed malesuada ipsum eget tellus fermentum, in imperdiet massa pharetra. Aliquam sit amet est vel tortor fermentum mollis. Cras justo metus, tristique vitae lobortis ut, aliquet sed nulla. Quisque in aliquam nisl. Proin sit amet tempus nibh. Morbi non orci vulputate est porttitor venenatis in et leo. Nunc varius, diam at gravida feugiat, sem mauris blandit orci, vel pulvinar lacus mauris vel velit. Nunc tempus turpis facilisis nisi elementum, sit amet accumsan tellus efficitur.</p>
+	<p>Below, you will be able to scroll through a few of the photographs I have taken in the past few years.</p>
   <div class="parallax" data-z-index="1" data-parallax="scroll" data-image-src="pro2.jpg">
    </div>
 	<p>Sed malesuada ipsum eget tellus fermentum, in imperdiet massa pharetra. Aliquam sit amet est vel tortor fermentum mollis. Cras justo metus, tristique vitae lobortis ut, aliquet sed nulla. Quisque in aliquam nisl. Proin sit amet tempus nibh. Morbi non orci vulputate est porttitor venenatis in et leo. Nunc varius, diam at gravida feugiat, sem mauris blandit orci, vel pulvinar lacus mauris vel velit. Nunc tempus turpis facilisis nisi elementum, sit amet accumsan tellus efficitur.</p>
@@ -42,9 +43,73 @@
    </div>
    <p>Sed malesuada ipsum eget tellus fermentum, in imperdiet massa pharetra. Aliquam sit amet est vel tortor fermentum mollis. Cras justo metus, tristique vitae lobortis ut, aliquet sed nulla. Quisque in aliquam nisl. Proin sit amet tempus nibh. Morbi non orci vulputate est porttitor venenatis in et leo. Nunc varius, diam at gravida feugiat, sem mauris blandit orci, vel pulvinar lacus mauris vel velit. Nunc tempus turpis facilisis nisi elementum, sit amet accumsan tellus efficitur.</p>
 
+<div class="row">
+  <div class="column">
+    <img src="images/1.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow" height="auto" width="210px">
+  </div>
+  <div class="column">
+    <img src="images/5.jpg" onclick="openModal();currentSlide(2)" class="hover-shadow" height="auto" width="210px">
+  </div>
+  <div class="column">
+    <img src="images/3.jpg" onclick="openModal();currentSlide(3)" class="hover-shadow" height="auto" width="210px">
+  </div>
+  <div class="column">
+    <img src="images/4.jpg" onclick="openModal();currentSlide(4)" class="hover-shadow" height="auto" width="210px">
+  </div>
+</div>
+
 
 
 </div>
+<div id="myModal" class="modal">
+  <span class="close cursor" onclick="closeModal()">&times;</span>
+  <div class="modal-content">
+
+    <div class="mySlides">
+      <div class="numbertext">1 / 4</div>
+        <img src="images/1.jpg" style="width:100%">
+    </div>
+
+    <div class="mySlides">
+      <div class="numbertext">2 / 4</div>
+        <img src="images/5.jpg" style="width:100%">
+    </div>
+
+    <div class="mySlides">
+      <div class="numbertext">3 / 4</div>
+        <img src="images/3.jpg" style="width:100%">
+    </div>
+
+    <div class="mySlides">
+      <div class="numbertext">4 / 4</div>
+        <img src="images/4.jpg" style="width:100%">
+    </div>
+
+    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+    <div class="caption-container">
+      <p id="caption"></p>
+    </div>
+
+    <div class="column">
+      <img class="demo" src="images/1.jpg" onclick="currentSlide(1)" alt="Nature" height="auto" width="240px">
+    </div>
+
+    <div class="column">
+      <img class="demo" src="images/5.jpg" onclick="currentSlide(2)" alt="Trolltunga" height="auto" width="240px">
+    </div>
+
+    <div class="column">
+      <img class="demo" src="images/3.jpg" onclick="currentSlide(3)" alt="Mountains" height="auto" width="240px">
+    </div>
+
+    <div class="column">
+      <img class="demo" src="images/4.jpg" onclick="currentSlide(4)" alt="Lights" height="auto" width="240px">
+    </div>
+  </div>
+</div>
+
 </body>
 <footer class="footer-distributed">
 
