--- a/parallax.html
+++ b/parallax.html
@@ -26,13 +26,13 @@
     
 
     <div class="parallaxtop" data-z-index="1" data-parallax="scroll" data-image-src="IMG_8224.jpg">
-      <h1 class="introh"> HI I'M NEIL KOUL, <br> A COMUPTER SCIENTIST.</h1>
+      <h1 class="introh"> HI I'M NEIL KOUL, <br> A COMUPTER SCIENTIST.<br> WEBSITE UNDER CONSTRUCTION</h1>
    </div>  
 </head>
   
 <body>
  	<div class="container">
-		<p class="mainp"><br><br>Hello! Welcome to my online portfolio. Here, you will be able to get to know me as well as learn about my projects that I am working on (this website is one of them! Not optimized for mobile). You also will be able to see a few of my works in photography and design (all photos used througout the website are mine). 
+		<p class="mainp"><br><br>Hello! Welcome to my online portfolio. Here, you will be able to get to know me as well as learn about my projects that I am working on (this website is one of them! Not optimized for mobile yet). You also will be able to see a few of my works in photography and design (all photos used througout the website are mine). 
     <br><br><br></p>
   <div class="parallaxme" data-z-index="1" data-parallax="scroll" data-image-src="aboutme.jpg">
     <a href="#" class="aboutmelink"><h1 class="aboutme"> About Me</h1></a>
