--- a/projects.html
+++ b/projects.html
@@ -31,10 +31,11 @@
 </head>
 <body>
 <div class="container">
-	<p>Throughout this page, you will be able to see a few of my current projects as well as past projects that I have completed. </p>
+	<p><br>Throughout this page, you will be able to see a few of my current projects as well as past projects that I have completed. <br></p>
    <div class="parallax" data-z-index="1" data-parallax="scroll" data-image-src="pro1.jpg">
-   </div>  
-	<p>Sed malesuada ipsum eget tellus fermentum, in imperdiet massa pharetra. Aliquam sit amet est vel tortor fermentum mollis. Cras justo metus, tristique vitae lobortis ut, aliquet sed nulla. Quisque in aliquam nisl. Proin sit amet tempus nibh. Morbi non orci vulputate est porttitor venenatis in et leo. Nunc varius, diam at gravida feugiat, sem mauris blandit orci, vel pulvinar lacus mauris vel velit. Nunc tempus turpis facilisis nisi elementum, sit amet accumsan tellus efficitur.</p>
+   </div>
+   <h1>Personal Website</h1>  
+	<p><br>Perhaps one of my longest ongoing projects is this website, which I have used to learn about<br></p>
   <div class="parallax" data-z-index="1" data-parallax="scroll" data-image-src="pro2.jpg">
    </div>
 	<p>Sed malesuada ipsum eget tellus fermentum, in imperdiet massa pharetra. Aliquam sit amet est vel tortor fermentum mollis. Cras justo metus, tristique vitae lobortis ut, aliquet sed nulla. Quisque in aliquam nisl. Proin sit amet tempus nibh. Morbi non orci vulputate est porttitor venenatis in et leo. Nunc varius, diam at gravida feugiat, sem mauris blandit orci, vel pulvinar lacus mauris vel velit. Nunc tempus turpis facilisis nisi elementum, sit amet accumsan tellus efficitur.</p>
